service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx
  namespace: gitops-lab
spec:
  type: ClusterIP
  selector:
    app: demo-nginx
  ports:
  - port: 80
    targetPort: 80
